--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -5,6 +5,8 @@ WORKDIR /app
 
 # 设置环境变量
 ENV PYTHONUNBUFFERED=1
+ENV FLASK_APP=flask_app.py
+ENV FLASK_ENV=production
 
 # 安装系统依赖
 RUN apt-get update && apt-get install -y \
@@ -21,12 +23,15 @@ RUN pip install --no-cache-dir --upgrade pip \
 # 复制前端代码
 COPY frontend/ ./
 
+# 创建必要的目录
+RUN mkdir -p uploads templates
+
 # 暴露端口
-EXPOSE 8501
+EXPOSE 5000
 
 # 健康检查
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:8501/_stcore/health || exit 1
+    CMD curl -f http://localhost:5000 || exit 1
 
 # 启动命令
-CMD ["streamlit", "run", "streamlit_app.py", "--server.address", "0.0.0.0", "--server.port", "8501", "--server.headless", "true"]
+CMD ["python", "flask_app.py"]
