--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,13 +25,13 @@ services:
       retries: 3
       start_period: 40s
 
-  # 前端Streamlit服务
+  # 前端Flask服务
   frontend:
     build:
       context: .
       dockerfile: Dockerfile.frontend
     ports:
-      - "8501:8501"
+      - "5000:5000"
     environment:
       - API_BASE_URL=http://backend:8000/api/v1
     depends_on:
@@ -41,7 +41,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8501/_stcore/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:5000"]
       interval: 30s
       timeout: 10s
       retries: 3
